# pytex-parallel

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-04-project-structure-design.md
weeks/week_01/: health.py  main.py
weeks/week_01/dummyjson/: client.py  dependencies.py  exceptions.py  schemas.py
weeks/week_01/reports/: entities.py  exceptions.py  mappers.py  router.py  schemas.py  service.py
weeks/week_02/: README.md  alembic.ini  pyproject.toml
weeks/week_02/app/: add_event_data.py  config.py  db.py  dependencies.py  exceptions.py  main.py  models.py  routes.py  schemas.py
weeks/week_02/app/infra/clients/: base.py  payment.py  protection.py
weeks/week_02/app/infra/postgres/: postgres.py
weeks/week_02/app/services/: checkout.py  dashboard.py  events.py
weeks/week_02/migrations/: env.py
