[project]
name = "Afisha"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "alembic==1.16.2",
    "fastapi==0.116.1",
    "httpx>=0.28.1",
    "psycopg[binary,pool]==3.2.9",
    "sqlalchemy[asyncio]==2.0.41",
    "tenacity>=9.1.4",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.2",
]
